<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/size_20">

    <TextView android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_10"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/lbl_new_note_title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_18"
        android:textStyle="normal"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/et_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_note"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="4"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/font_18" />

    <LinearLayout
        android:layout_marginTop="@dimen/size_10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:layout_weight="3"
            android:gravity="end"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="@dimen/size_30"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/save"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:textSize="@dimen/font_14"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_marginEnd="@dimen/size_10"
            android:layout_marginRight="@dimen/size_10" />
    </LinearLayout>
</LinearLayout>