<resources>
    <string name="app_name">Note Making</string>
    <string name="action_settings">Settings</string>
    <string name="activity_title_home">Notes</string>
    <string name="msg_no_notes">No notes found!</string>
    <string name="lbl_new_note_title">New Note</string>
    <string name="lbl_edit_note_title">Edit Note</string>
    <string name="hint_enter_note">Enter your note!</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="enternote">Enter Note</string>
    <string name="edit">Edit</string>
    <string name="edit_note">Edit Note</string>
    <string name="update">UPDATE</string>
    <string name="image_description">Image Description</string>
    <string name="delete">Delete</string>
    <string name="exit_text">Do you want to Exit?</string>
    <string name="note_deleted">Note Deleted</string>
    <string name="note_added">Note Added</string>
    <string name="settings">Settings</string>
</resources>
